  depending on the implicit chdir("/").
  [bugs introduced in coreutils-8.23]

  cp no longer issues an incorrect warning about directory hardlinks when a
  source directory is specified multiple times.  Now, consistent with other
  file types, a warning is issued for source directories with duplicate names,
  or with -H the directory is copied again using the symlink name.

  head, od, split, tac, tail, and wc no longer mishandle input from files in
  /proc and /sys file systems that report somewhat-incorrect file sizes.

  mkdir --parents -Z now correctly sets the context for the last component,
  even if the parent directory exists and has a different default context.
  [bug introduced with the -Z restorecon functionality in coreutils-8.22]

  numfmt no longer outputs incorrect overflowed values seen with certain
  large numbers, or with numbers with increased precision.
  [bug introduced when numfmt was added in coreutils-8.21]

  numfmt now handles leading zeros correctly, not counting them when
  settings processing limits, and making them optional with floating point.
  [bug introduced when numfmt was added in coreutils-8.21]

  paste no longer truncates output for large input files.  This would happen
  for example with files larger than 4GiB on 32 bit systems with a '\n'
  character at the 4GiB position.
  [the bug dates back to the initial implementation]

  rm indicates the correct number of arguments in its confirmation prompt,
  on all platforms.  [bug introduced in coreutils-8.22]

  shuf -i with a single redundant operand, would crash instead of issuing
  a diagnostic.  [bug introduced in coreutils-8.22]

  tail releases inotify resources when unused.  Previously it could exhaust
  resources with many files, or with -F if files were replaced many times.
  [bug introduced in coreutils-7.5]

  tail -f again follows changes to a file after it's renamed.
  [bug introduced in coreutils-7.5]
